# eotransform-xarray

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  Makefile  README.md  requirements.dev.txt  requirements.prod.txt  requirements.test.txt  setup.cfg
.github/workflows/: publish.yml  test_coverage.yml  test_platforms.yml
ci/: add-pypi-indices.sh
docs/: .gitignore  api.rst  conf.py  index.rst  install.rst  requirements.txt
docs/_autosummary/: eotransform_xarray.constants.rst  eotransform_xarray.functional.decode.decode_array.rst  eotransform_xarray.functional.decode.rst  (+98 more)
tests/: conftest.py  test_filesystem_gather_files.py  test_load_data_frame_to_array.py  test_masking_operation.py  test_meta.py  test_pandas_transform_group_files_data_frame_to_bands_lists.py  test_sink_combined_shards.py  test_transform_add_attributes.py  test_transform_aggregate_along_dimension.py  test_transform_batch_along_coordinate_axis.py  test_transform_from_geotiffs.py  test_transform_masking_operation.py  test_transform_resample_with_gauss.py  test_transform_resample_with_gauss.test_resample_raster_using_gauss_interpolation.0.approved.tif  test_transform_resample_with_gauss.test_resample_raster_using_gauss_interpolation.0.dask.approved.tif  test_transform_resample_with_gauss.test_resample_raster_using_gauss_interpolation.0.numba.approved.tif  test_transform_resample_with_gauss.test_resample_raster_using_gauss_interpolation.1.approved.tif  test_transform_send_data_vars_to_stream.py  test_transform_send_to_stream.py  test_transform_sig0_to_ref_angle_normalized_sig0.py
(+16 files in other folders)
