[metadata]
name = eotransform-xarray
version = attr: eotransform_xarray.__version__
description = Implements transformations on xarray data structures, to be used with eotransform streamed_process.
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
url = https://git.eodc.eu/tuwien/eotransform-xarray
platforms = any

[options]
package_dir =
    = src
packages = find:
install_requires = file: requirements.prod.txt

[options.packages.find]
where = src

[options.extras_require]
test = file: requirements.test.txt
lazy = file: requirements.lazyloading.txt
